超时参数修改为连接超时而不是读取超时